# visual_itunes_apple_music_to_android

./: .gitignore  README.md
.github/workflows/: build.yml
android/: .gitignore  README.md  settings.gradle.kts  setup-and-build.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/musicsync/companion/: AtomicFileWriter.kt  DesktopAnnouncer.kt  DeviceIdStore.kt  DeviceNameStore.kt  DiscoveryResponder.kt  MainActivity.kt  ManifestBuilder.kt  MdnsAdvertiser.kt  MusicRootStore.kt  PairingManager.kt  Protocol.kt  RememberedDesktopsStore.kt  SyncServer.kt  SyncService.kt  TokenStore.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/dev/musicsync/companion/: AtomicFileWriterTest.kt  ManifestBuilderTest.kt  PathValidationTest.kt
scripts/: generate-android-icons.sh  publish-prerelease.sh  sync-version.sh
tauri/: .gitignore  Cargo.toml  README.md
tauri/core/: Cargo.toml
tauri/core/src/: lib.rs  library.rs  matching.rs  playlist.rs  protocol.rs  settings.rs  track.rs  xml_helpers.rs
tauri/src/: index.html  main.js  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: discovery.rs  main.rs  pair.rs  sync.rs
