[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = "0.36"
anyhow = "1"
thiserror = "1"
directories = "5"
tracing = "0.1"
