[package]
name = "musicsync-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "musicsync_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
quick-xml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
